--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <img class="rounded" src="icon.png">
 <br>
 <br>
-<form action="mainpage.html" method="POST" align="center" onsubmit="success()" >
+<form action="mainpage.html" align="center" onsubmit="success()" >
         Username: <br><input type="text" id="name" required>
         <br><br>
         Password: <br><input type="password" required>
