--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <br><br>
         Password: <br><input type="password" required>
         <br><br>
-        <input type="submit" value="Log In" class="btn btn-info btn-lg">
+        <button class="btn btn-info btn-lg">Log In</button>
 </form>
 <br>
 <script type="text/javascript">
