--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 <br>
 <br>
 <form action="mainpage.html" align="center" onsubmit="success()" >
-        Username: <br><input type="text" id="name" required>
+        Username: <br><input type="text" id="name">
         <br><br>
-        Password: <br><input type="password" required>
+        Password: <br><input type="password">
         <br><br>
         <button class="btn btn-info btn-lg">Log In</button>
 </form>
