--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 <br>
 <br>
 <form action="mainpage.html" align="center" onsubmit="success()" >
-        Username: <br><input type="text" id="name">
+        Username: <br><input type="text" id="name" required>
         <br><br>
-        Password: <br><input type="password">
+        Password: <br><input type="text" required>
         <br><br>
-        <button class="btn btn-info btn-lg">Log In</button>
+        <input type="submit" value="Log In" class="btn btn-info btn-lg">
 </form>
 <br>
 <script type="text/javascript">
