--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <form action="mainpage.html" align="center" onsubmit="success()" >
         Username: <br><input type="text" id="name" required>
         <br><br>
-        Password: <br><input type="text" required>
+        Password: <br><input type="password" required>
         <br><br>
         <input type="submit" value="Log In" class="btn btn-info btn-lg">
 </form>
